load and parse tensor flow models correctly